--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -37,9 +37,12 @@ Haroen Viaene
     ```SQL
     SELECT beschr
     FROM artikelen
-    WHERE artikel_id NOT IN (
+    WHERE artikel_id NOT IN
+        (
         SELECT artikel_id
-        FROM items);
+        FROM items
+        )
+    ;
     ```
 
 5. Wat is de totale factuurprijs voor de levering(en) van bestellingnummer 1? (schrijf dit met een natural join)
