--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -26,13 +26,16 @@ Haroen Viaene
 
 3. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
+    niet af:
+
     ```SQL
-    SELECT;
+    SELECT tijdstip
+    INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
+    INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
+    WHERE ;
     ```
 
 4. Welke artikelen komen in geen enkele bestelling voor?
-
-    fout:
 
     ```SQL
     SELECT beschr
