--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -51,7 +51,11 @@ Haroen Viaene
 5. Wat is de totale factuurprijs voor de levering(en) van bestellingnummer 1? (schrijf dit met een natural join)
 
     ```SQL
-    SELECT;
+    SELECT bestelling_id,items.artikel_id,aantal, sum(prijs*aantal)
+    FROM items
+    NATURAL JOIN bestellingen
+    INNER JOIN artikelen on artikelen.artikel_id=items.artikel_id
+    WHERE bestelling_id=1;
     ```
 
 6. Geef de ids van die bestellingen die volledig op minder dan 7 dagen tijd zijn geleverd.
