--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -15,13 +15,14 @@ Haroen Viaene
 
 2. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
 
-    fout:
-
     ```SQL
-    SELECT items.artikel_id, beschr
-    FROM items
-    INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
-    INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id;
+    SELECT artikel_id, beschr,som
+	FROM (SELECT artikelen.artikel_id, bestelling_id, SUM(aantal) AS som, beschr
+	    FROM artikelen
+	    INNER JOIN items ON items.artikel_id = artikelen.artikel_id
+	    GROUP BY beschr
+	    HAVING COUNT(*) > 1) AS table1
+	WHERE som > 4;
     ```
 
 3. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
