--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -30,9 +30,11 @@ Haroen Viaene
 
     ```SQL
     SELECT tijdstip
+    FROM items
     INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
     INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
-    WHERE ;
+    INNER JOIN klanten ON klanten.klant_id = bestellingen.klant_id
+    WHERE gemeente IS "GENT";
     ```
 
 4. Welke artikelen komen in geen enkele bestelling voor?
