Query 1: Kortere versie, Query 2: alternatief

--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -6,11 +6,10 @@ Haroen Viaene
 1. Geef voor elke bestelling: het bestelnummer en de prijs van de duurste artikelsoort(en) die hierbij besteld werd(en).
 
     ```SQL
-    SELECT bestellingen.bestelling_id, MAX(prijs)
-    FROM bestellingen
-    INNER JOIN items ON items.bestelling_id = bestellingen.bestelling_id
-    INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
-    GROUP BY bestellingen.bestelling_id;
+    SELECT bestelling_id, MAX(prijs)
+    FROM artikelen
+    INNER JOIN items on items.artikel_id=artikelen.artikel_id
+    GROUP BY bestelling_id;
     ```
 
 2. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
@@ -23,6 +22,14 @@ Haroen Viaene
 	    GROUP BY beschr
 	    HAVING COUNT(*) > 1) AS table1
 	WHERE som > 4;
+    ```
+    of
+    ```SQL
+    SELECT items.artikel_id, SUM(aantal) as aantal_artikelen, COUNT(bestelling_id) as aantal_leveringen, beschr
+    FROM artikelen
+    INNER JOIN items ON items.artikel_id=artikelen.artikel_id
+    GROUP BY artikel_id
+    HAVING aantal_artikelen > 4 AND aantal_leveringen >=2;
     ```
 
 3. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
