Correcties query 3,6 en 7; Verkorting query 5

--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -34,15 +34,20 @@ Haroen Viaene
 
 3. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
-    niet af:
-
     ```SQL
-    SELECT tijdstip
+    SELECT distinct tijdstip
     FROM items
-    INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
-    INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
-    INNER JOIN klanten ON klanten.klant_id = bestellingen.klant_id
-    WHERE gemeente IS "GENT";
+    WHERE bestelling_id IN
+    (
+    	SELECT bestelling_id
+    	FROM
+    	(
+            SELECT gemeente,bestelling_id
+            FROM klanten
+            INNER JOIN bestellingen ON bestellingen.klant_id = klanten.klant_id        
+    	)as t
+    WHERE gemeente = "GENT"
+    );
     ```
 
 4. Welke artikelen komen in geen enkele bestelling voor?
@@ -61,10 +66,9 @@ Haroen Viaene
 5. Wat is de totale factuurprijs voor de levering(en) van bestellingnummer 1? (schrijf dit met een natural join)
 
     ```SQL
-    SELECT bestelling_id,items.artikel_id,aantal, sum(prijs*aantal)
-    FROM items
-    NATURAL JOIN bestellingen
-    INNER JOIN artikelen on artikelen.artikel_id=items.artikel_id
+    SELECT sum(prijs*aantal) as totale_prijs
+    FROM artikelen
+    NATURAL JOIN items
     WHERE bestelling_id=1;
     ```
 
@@ -73,13 +77,20 @@ Haroen Viaene
     ```SQL
     SELECT bestellingen.bestelling_id
     FROM bestellingen
-    INNER JOIN items on items.bestelling_id = bestellingen.bestelling_id
-    WHERE DATEDIFF(tijdstip,datum) < 7;
+    INNER JOIN items ON items.bestelling_id = bestellingen.bestelling_id
+    WHERE bestellingen.bestelling_id NOT IN
+    (
+    	SELECT bestelling_id
+    	FROM items
+    	WHERE tijdstip IS NULL
+    )
+    GROUP BY bestelling_id
+    HAVING MAX(DATEDIFF(tijdstip,datum)) < 7;
     ```
 
 7. Geef het bestelnummer van alle bestellingen waarvan de (reeds uitgevoerde) levering(en) enkel op een dinsdag plaatsvonden.
 
     ```SQL
     SELECT bestelling_id FROM items
-    WHERE DAYTIME(tijdstip)="Tuesday";
+    WHERE DAYNAME(tijdstip)="Tuesday";
     ```
