SQL is een roepende taal

--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -35,7 +35,7 @@ Haroen Viaene
 3. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
     ```SQL
-    SELECT distinct tijdstip
+    SELECT DISTINCT tijdstip
     FROM items
     WHERE bestelling_id IN
     (
