--- a/Digitale Technieken 1/les/les.tex
+++ b/Digitale Technieken 1/les/les.tex
@@ -57,7 +57,7 @@ Haroen \textsc{Viaene}\\
 
 \chapter{Inleiding}
 
-De theorielessen zijn niet altijd even makkelijk om in te noteren in real-time, dus daarom kan het zijn dat bepaalde delen door mij niet ingevoegd worden. Volgens de normale regeling zou ik die dan wel op papier moeten hebben. Dit gebeurt echter zeker niet altijd, als ik een stuk van de les niet oplette, heb ik er dus waarschijnlijk ook geen notities van.
+De theorielessen zijn niet altijd even makkelijk om in te noteren in real-time, dus daarom kan het zijn dat bepaalde delen door mij niet ingevoegd worden. Volgens de normale regeling zou ik die dan wel op papier moeten hebben. Dit gebeurt echter zeker niet altijd, als ik een stuk van de les niet opletten, heb ik er dus waarschijnlijk ook geen notities van.
 
 Het is zeker niet de bedoeling dat ik dit helemaal alleen maak, stuur als je ergens een fout ziet staan een issue of een pull request als je weet hoe hem op te lossen.
 
