--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -3,6 +3,15 @@ Databases labo 5.
 
 Haroen Viaene
 
+vooraf: voeg to aan `world.sql`:
+
+```SQL
+DROP Database if exists world;
+CREATE Database world;
+use world;
+```
+
+
 1. Geef de top-10 van de landen volgens aantal inwoners in de hoofdstad.
 
     ```SQL
