--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -15,7 +15,10 @@ use world;
 1. Geef de top-10 van de landen volgens aantal inwoners in de hoofdstad.
 
     ```SQL
-
+    SELECT country.Population, Capital, country.Name, city.Name
+    FROM country
+    LEFT JOIN city ON city.CountryCode = country.Code
+    LIMIT 10; (don't trust this shit (c)Maliek)
     ```
 
 2. Wat is de totale oppervlakte van Zuid-Amerika?
