--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -15,7 +15,10 @@ use world;
 1. Geef de top-10 van de landen volgens aantal inwoners in de hoofdstad.
 
     ```SQL
-
+    SELECT Country.Name, City.Population from Country
+    INNER JOIN City ON Code = CountryCode
+    ORDER BY City.Population DESC
+    LIMIT 10;
     ```
 
 2. Wat is de totale oppervlakte van Zuid-Amerika?
