--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -24,8 +24,8 @@ use world;
 2. Wat is de totale oppervlakte van Zuid-Amerika?
 
     ```SQL
-    SELECT SUM(country.SurfaceArea) AS totalSurface
-    FROM country
+    SELECT SUM(Country.SurfaceArea) AS totalSurface
+    FROM Country
     WHERE Continent = "South America";
     ```
 
