--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -24,8 +24,8 @@ use world;
 2. Wat is de totale oppervlakte van Zuid-Amerika?
 
     ```SQL
-    SELECT SUM(Country.SurfaceArea) AS totalSurface
-    FROM Country
+    SELECT SUM(country.SurfaceArea) AS totalSurface
+    FROM country
     WHERE Continent = "South America";
     ```
 
@@ -33,7 +33,10 @@ use world;
 3. Welke stad van welk land heeft de meeste inwoners?
 
     ```SQL
-
+    SELECT city.Name, country.Name
+    FROM city
+    INNER JOIN country ON CountryCode = country.Code
+    ORDER BY city.Population DESC limit 1;
     ```
 
 4. Wat is de gemiddelde levensverwachting in Afrika?
