--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -24,8 +24,8 @@ use world;
 2. Wat is de totale oppervlakte van Zuid-Amerika?
 
     ```SQL
-    SELECT SUM(country.SurfaceArea) AS totalSurface
-    FROM country
+    SELECT SUM(Country.SurfaceArea) AS totalSurface
+    FROM Country
     WHERE Continent = "South America";
     ```
 
@@ -33,10 +33,10 @@ use world;
 3. Welke stad van welk land heeft de meeste inwoners?
 
     ```SQL
-    SELECT city.Name, country.Name
-    FROM city
-    INNER JOIN country ON CountryCode = country.Code
-    ORDER BY city.Population DESC limit 1;
+    SELECT City.Name, country.Name
+    FROM City
+    INNER JOIN country ON CountryCode = Country.Code
+    ORDER BY City.Population DESC limit 1;
     ```
 
 4. Wat is de gemiddelde levensverwachting in Afrika?
