--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -33,9 +33,9 @@ use world;
 3. Welke stad van welk land heeft de meeste inwoners?
 
     ```SQL
-    SELECT City.Name, country.Name
+    SELECT City.Name, Country.Name
     FROM City
-    INNER JOIN country ON CountryCode = Country.Code
+    INNER JOIN Country ON CountryCode = Country.Code
     ORDER BY City.Population DESC limit 1;
     ```
 
