--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -41,7 +41,10 @@ use world;
 
 4. Wat is de gemiddelde levensverwachting in Afrika?
 
-    ``SQL
+    ```SQL
+    SELECT SUM(LifeExpectancy)/COUNT(*)
+    FROM country
+    WHERE Continent = "Africa";
     ```
 
 5. Welke talen worden er in België gesproken?
