--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -43,7 +43,7 @@ use world;
 
     ```SQL
     SELECT SUM(LifeExpectancy)/COUNT(*)
-    FROM country
+    FROM Country
     WHERE Continent = "Africa";
     ```
 
@@ -55,6 +55,7 @@ use world;
 6. Geef de volledige naam van de landen waar ‘Spanish’ wordt gesproken?
 
     ``SQL
+    SELECT Country.name
     ```
 
 7. Hoeveel procent van de bevolking spreekt een officiële taal in België?
