--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -49,26 +49,30 @@ use world;
 
 5. Welke talen worden er in België gesproken?
 
-    ``SQL
+    ```SQL
+    SELECT Language
+    FROM countrylanguage
+    INNER JOIN country on country.code = CountryCode
+    WHERE Name = "Belgium";
     ```
 
 6. Geef de volledige naam van de landen waar ‘Spanish’ wordt gesproken?
 
-    ``SQL
+    ```SQL
     SELECT Country.name
     ```
 
 7. Hoeveel procent van de bevolking spreekt een officiële taal in België?
 
-    ``SQL
+    ```SQL
     ```
 
 8. Maak een view CountriesAndCapitals aan waarin elk land met z’n hoofdstad en het aantal inwoners uit die hoofdstad te zien is.
 
-    ``SQL
+    ```SQL
     ```
 
 9. Geef gebruik makend van bovenstaande view de hoofdstad met de meeste inwoners.
 
-    ``SQL
+    ```SQL
     ```
