--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -47,7 +47,7 @@ use world;
     WHERE Continent = "Africa";
     ```
 
-5. Welke talen worden er in België gesproken?
+5. Welke talen worden er in België gesproken?
 
     ``SQL
     ```
@@ -55,7 +55,8 @@ use world;
 6. Geef de volledige naam van de landen waar ‘Spanish’ wordt gesproken?
 
     ``SQL
-    SELECT Country.name
+    SELECT Name from Country
+    WHERE
     ```
 
 7. Hoeveel procent van de bevolking spreekt een officiële taal in België?
