--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -51,6 +51,10 @@ use world;
 
     ``SQL
     ```
+    SELECT Language, isOfficial
+    FROM countrylanguage
+    LEFT JOIN country ON country.Code = countrylanguage.CountryCode
+    WHERE country.Name = "Belgium"; BETER DAN ARNAUD
 
 6. Geef de volledige naam van de landen waar ‘Spanish’ wordt gesproken?
 
