--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -58,7 +58,7 @@ use world;
 
 6. Geef de volledige naam van de landen waar ‘Spanish’ wordt gesproken?
 
-    ``SQL
+    ```SQL
     SELECT Name from Country
     WHERE
     ```
