--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -59,7 +59,9 @@ use world;
 6. Geef de volledige naam van de landen waar ‘Spanish’ wordt gesproken?
 
     ```SQL
-    SELECT Name from Country
+    FROM country
+    INNER JOIN countrylanguage ON CountryCode = country.code
+    WHERE Language = "Spanish";
     WHERE
     ```
 
