--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -68,6 +68,10 @@ use world;
 7. Hoeveel procent van de bevolking spreekt een officiële taal in België?
 
     ```SQL
+    SELECT SUM(Percentage) AS totaalPercentageOfficieel
+    FROM countrylanguage
+    LEFT JOIN country ON country.Code = countrylanguage.CountryCode
+    WHERE country.Name = "Belgium" AND countrylanguage.IsOfficial = "T";
     ```
 
 8. Maak een view CountriesAndCapitals aan waarin elk land met z’n hoofdstad en het aantal inwoners uit die hoofdstad te zien is.
