--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -59,10 +59,10 @@ use world;
 6. Geef de volledige naam van de landen waar ‘Spanish’ wordt gesproken?
 
     ```SQL
-    FROM country
-    INNER JOIN countrylanguage ON CountryCode = country.code
+    SELECT Name
+    FROM Country
+    INNER JOIN Countrylanguage ON CountryCode = Country.Code
     WHERE Language = "Spanish";
-    WHERE
     ```
 
 7. Hoeveel procent van de bevolking spreekt een officiële taal in België?
