hoofdletters zijn mijn sweglord

--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -69,9 +69,9 @@ use world;
 
     ```SQL
     SELECT SUM(Percentage) AS totaalPercentageOfficieel
-    FROM countrylanguage
-    LEFT JOIN country ON country.Code = countrylanguage.CountryCode
-    WHERE country.Name = "Belgium" AND countrylanguage.IsOfficial = "T";
+    FROM CountryLanguage
+    LEFT JOIN Country ON Country.Code = CountryLanguage.CountryCode
+    WHERE Country.Name = "Belgium" AND CountryLanguage.IsOfficial = "T";
     ```
 
 8. Maak een view CountriesAndCapitals aan waarin elk land met z’n hoofdstad en het aantal inwoners uit die hoofdstad te zien is.
