--- a/Databanken/05.md
+++ b/Databanken/05.md
@@ -77,9 +77,16 @@ use world;
 8. Maak een view CountriesAndCapitals aan waarin elk land met z’n hoofdstad en het aantal inwoners uit die hoofdstad te zien is.
 
     ```SQL
+    CREATE VIEW CountriesAndCapitals AS 
+    SELECT country.Name AS country_name, city.Name AS city_name, city.Population
+    FROM country
+    INNER JOIN city ON CountryCode = country.Code;
     ```
 
 9. Geef gebruik makend van bovenstaande view de hoofdstad met de meeste inwoners.
 
     ```SQL
+    SELECT city_name
+    FROM CountriesAndCapitals
+    ORDER BY Population DESC limit 1;
     ```
