best update ever.

--- a/µControllers/04.md
+++ b/µControllers/04.md
@@ -7,9 +7,9 @@ Computertechnologie 2
 
 D-poort wordt gebruikt voor LED en LCD
 
-clrf = zet op 0 = zet op uitgang
+`clrf` = zet op 0 = zet op uitgang
 
-setf = zet op 1 = zet op ingang
+`setf` = zet op 1 = zet op ingang
 
-btfss PORTB,4	;leest de vierde bit van poort b uit
+`btfss PORTB,4	;leest de vierde bit van poort b uit`
 
