--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -2,32 +2,13 @@
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath, epic, eepic, float, subfig, amsfonts, color, amsthm, textcomp, microtype, fullpage}
-\usepackage{SIunits}
 \usepackage[parfill]{parskip}
 \usepackage[pdftex]{graphicx}
 \usepackage{color}
-\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
-\definecolor{greencomments}{rgb}{0,0.5,0}
-\definecolor{redstrings}{rgb}{0.9,0,0}
-\usepackage[font=small,format=plain,labelfont=bf,up,textfont=it,up]{caption}
 \usepackage[linkcolor=black,urlcolor=blue,citecolor=black]{hyperref}
 \hypersetup{colorlinks=true}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-\usepackage{listings}
-\lstset{language=[Sharp]C,
-  showspaces=false,
-  showtabs=false,
-  breaklines=true,
-  showstringspaces=false,
-  breakatwhitespace=true,
-  escapeinside={(*@}{@*)},
-  commentstyle=\color{greencomments},
-  keywordstyle=\color{bluekeywords},
-  stringstyle=\color{redstrings},
-  basicstyle=\ttfamily
-}
-\usepackage[T1]{fontenc}
-\usepackage{beramono}
+% \usepackage[T1]{fontenc}
 \usepackage{helvet}
 \renewcommand*{\familydefault}{\sfdefault}
 
@@ -86,7 +67,7 @@ Ik ben toegekomen per fiets om iets na 8u 's morgens. De echte werkdag begon een
 
 Rond 8:30 begint de vergadering, waarvan ik uiteraard niets mag vertellen in dit verslag. Hier kreeg ik mijn taak voor de dag en de volgende dagen, namelijk deze morgen \emph{klusklub}, in de namiddag \emph{wandelen}, morgen \emph{muziek} en in de namiddag \emph{bewonersvergadering} (voor de meeste andere begeleiders is het dan vergadering waar ik niet aan meedoe). Volgende maandag is het hetzelfde programma als vandaag.
 
-Ik volg deze morgen opvoeder Jürgen Tierlinkx
+Ik volg deze morgen opvoeder Jürgen Tierlinkx. We beginnen met de drie bewoners waarbij hij de \emph{morgenronde}
 
 Om 13:12 was mijn werk gedaan, en heb ik het evaluatieblad afgegeven aan de groepschef van de instelling. Daarna heb ik mijn verslag van de voormiddag geschreven. Om 13:30 begint de vergadering die de namiddag doet opstarten.
 
