ordening of document, done day 1

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -8,8 +8,6 @@
 \usepackage[linkcolor=black,urlcolor=blue,citecolor=black]{hyperref}
 \hypersetup{colorlinks=true}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-\usepackage{helvet}
-\renewcommand*{\familydefault}{\sfdefault}
 
 \begin{document}
 \begin{titlepage}
@@ -46,13 +44,11 @@ Haroen \textsc{Viaene}\\
 \end{titlepage}
 
 \newpage
-\begin{abstract}
 
-% \section{'t Wit Huis, Loppem}
+\section{Voorstelling}
 
-% voorstelling van de instelling, de doelgroep, met contactpersoon, 1
+% voorstelling van de instelling, de doelgroep, met contactpersoon, 1 bladzijde
 
-\end{abstract}
 
 \section{Verslag}
 
@@ -60,25 +56,41 @@ Haroen \textsc{Viaene}\\
 
 \subsection{Maandag 14 december 2015}
 
-\subsection{Voormiddag}
+\subsubsection{Voormiddag}
 
-Ik ben toegekomen per fiets om iets na 8u 's morgens. De echte werkdag begon een halfuur later, terwijl ik daarop wacht, loop ik al eens rond met mijn vader, die me kennis doet maken met de bewoners. Nadat dat gebeurd was, ging ik terug naar de personeelsruimte, en vertrok mijn vader naar huis; hij moet vandaag niet werken.
+Ik ben toegekomen per fiets om iets na 8:00 's morgens. De echte werkdag begon een halfuur later, terwijl ik daarop wacht, loop ik al eens rond met mijn vader, die me kennis doet maken met de bewoners. Nadat dat gebeurd was, ging ik terug naar de personeelsruimte, en vertrok mijn vader naar huis; hij moet vandaag niet werken.
 
 Rond 8:30 begint de vergadering, waarvan ik uiteraard niets mag vertellen in dit verslag. Hier kreeg ik mijn taak voor de dag en de volgende dagen, namelijk deze morgen \emph{klusklub}, in de namiddag \emph{wandelen}, morgen \emph{muziek} en in de namiddag \emph{bewonersvergadering} (voor de meeste andere begeleiders is het dan vergadering waar ik niet aan meedoe). Volgende maandag is het hetzelfde programma als vandaag.
 
-Ik volg deze morgen opvoeder Jürgen Tierlinkx. We beginnen met de drie bewoners waarbij hij de \emph{morgenronde}
+Ik volg deze morgen opvoeder Jürgen Tierlinkx. We beginnen met de drie bewoners waarbij hij de \emph{morgengroet} doet. Dit is redelijk simpel aangezien het opstaan relatief autonoom gebeurt (of misschien tijdens de nachtshift, ik ben het niet helemaal zeker). De taak die hierbij hoort is eigenlijk redelijk gemakkelijk, en bestaat uit het controleren dat die bewoners effectief aanwezig zijn, hun bet effectief gemaakt is en ze geschoren zijn en hun tanden gepoetst hebben. Dit gebeurde aan een redelijk laid-back tempo, waardoor het ongeveer 10:00 was toen we begonnen met de activiteit.
+
+De activiteit in de morgen heette \emph{klusklub}, waarbij een aantal bewoners meehelpen met enkele klusjes die nodig zijn in het gebouw. Dit kunnen dingen zijn als gebroken toestellen repareren, of zoals nu een verbetering ergens aan toevoegen.
+
+Vandaag was dit het toevoegen aan blokjes in een sportrek. Er hing een ijzeren rek aan de hoogste sport voor de opening die zo'n sportrek altijd heeft. Dit was jammer genoeg te laag voor enkele bewoners dus moest het verplaatst worden naar de hoogste sport. Op die hoogte waren er geen sporten onder voor het te ondersteunen, dus dat moest vervangen worden door blokjes. De materialen hebben we gehaald bij de houtwerkplaats, die deze instelling ook heeft.
+
+Dit werk was rond 11:45 gedaan, waarna ik geholpen heb bij het sorteren van het eten -- dat via Spermalie geregeld wordt. Bij het eten heb ik geholpen bij het inschenken van mijn tafel, opscheppen van de borden en bij één iemand moest het eten voor hem gesneden worden.
 
 Om 13:12 was mijn werk gedaan, en heb ik het evaluatieblad afgegeven aan de groepschef van de instelling. Daarna heb ik mijn verslag van de voormiddag geschreven. Om 13:30 begint de vergadering die de namiddag doet opstarten.
 
-\subsection{Namiddag}
+\subsubsection{Namiddag}
+
+De middag begint net zoals de voormiddag met een vergadering van $\pm$ 25 minuten. Deze overloopt opnieuw elk van de bewoners, en zegt nog even snel hoe de taken verdeeld zijn.
+
+In de namiddag volg ik opvoeder Bart, die zal wandelen. We gaan naar Zevenkerke, waar we wandelen van 14:00 tot 15:30. Bij deze activiteit was er ook een andere vrijwilliger aanwezig die vaker meegaat. Bij het wandelen heb ik gepraat met alle vier de bewoners die mee gingen. Uit respect voor de privacy van de bewoners zal ik hier niet te diep op ingaan, maar ik heb toch een aantal keer moeten uitleggen dat ik dit verslag nu moest schrijven, en \emph{waarom} ik nu eigenlijk een stage doe voor 24 uur als ik geen gerelateerde richting doe.
+
+Ik vond het ook interessant om te horen hoe mensen die een heel anders profiel hebben dan de meeste mensen toch nog vergelijkbare gedachten hebben als anderen.
 
 \subsection{Dinsdag 15 december 2015}
 
 \subsection{Maandag 21 december 2015}
 
-\subsection{Ervaringen}
+\section{Ervaringen}
 
-%
+\subsection{Door het personeel}
+% halve bladzijde
+
+\subsection{Door mezelf}
+% hele bladzijde
 
 
 \end{document}
