more ordening, more intro

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper,12pt]{article}
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath, epic, eepic, float, subfig, amsfonts, color, amsthm, textcomp, microtype, fullpage}
@@ -45,10 +45,21 @@ Haroen \textsc{Viaene}\\
 
 \newpage
 
+\section*{Inhoud}
+
+\tableofcontents
+
+\newpage
+
 \section{Voorstelling}
 
 % voorstelling van de instelling, de doelgroep, met contactpersoon, 1 bladzijde
 
+'t Wit Huis te Loppem is een instelling voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorieke. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week werken.
+
+De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een ``White House Band'', die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Raymond van het Groenewoud. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld.
+
+Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaalde gebroken dingen, vogelnestjes maken,
 
 \section{Verslag}
 
@@ -79,6 +90,8 @@ De middag begint net zoals de voormiddag met een vergadering van $\pm$ 25 minute
 In de namiddag volg ik opvoeder Bart, die zal wandelen. We gaan naar Zevenkerke, waar we wandelen van 14:00 tot 15:30. Bij deze activiteit was er ook een andere vrijwilliger aanwezig die vaker meegaat. Bij het wandelen heb ik gepraat met alle vier de bewoners die mee gingen. Uit respect voor de privacy van de bewoners zal ik hier niet te diep op ingaan, maar ik heb toch een aantal keer moeten uitleggen dat ik dit verslag nu moest schrijven, en \emph{waarom} ik nu eigenlijk een stage doe voor 24 uur als ik geen gerelateerde richting doe.
 
 Ik vond het ook interessant om te horen hoe mensen die een heel anders profiel hebben dan de meeste mensen toch nog vergelijkbare gedachten hebben als anderen.
+
+Na het wandelen drinken we allemaal een drankje in de cafetaria van de Abdij van Zevenkerke. Bij het terug aankomen in de instelling
 
 \subsection{Dinsdag 15 december 2015}
 
