--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -59,7 +59,13 @@ Haroen \textsc{Viaene}\\
 
 De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een ``White House Band'', die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Raymond van het Groenewoud. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld.
 
-Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaalde gebroken dingen, vogelnestjes maken,
+Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaalde gebroken dingen, vogelnestjes maken, vroeger ook helpen met het eten (maar dit is tegenwoordig niet meer toegelaten door strengere eisen qua voedsel).
+
+Ook is er een grote focus op sport, en wordt er ook elk jaar meegedaan aan evenementen zoals de Special Olympics en lokale fiets-, loop-, zwem- en andere wedstrijden.
+
+Op 't Wit Huis verblijven momenteel 30 bewoners van 19 tot 70 jaar.
+% check this %
+Ze worden begeleid door een team van 20 man.
 
 \section{Verslag}
 
@@ -91,7 +97,9 @@ In de namiddag volg ik opvoeder Bart, die zal wandelen. We gaan naar Zevenkerke,
 
 Ik vond het ook interessant om te horen hoe mensen die een heel anders profiel hebben dan de meeste mensen toch nog vergelijkbare gedachten hebben als anderen.
 
-Na het wandelen drinken we allemaal een drankje in de cafetaria van de Abdij van Zevenkerke. Bij het terug aankomen in de instelling
+Na het wandelen drinken we allemaal een drankje in de cafetaria van de Abdij van Zevenkerke. Bij het terug aankomen in de instelling praat ik nog met een bewoner die wel drie dagen per week thuisblijft, hij werkt bij een woonzorgcentrum in de buurt bij de afwas.
+
+Om 16:45 heb ik mijn dag afgesloten en ben ik naar huis gegaan.
 
 \subsection{Dinsdag 15 december 2015}
 
