--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -57,7 +57,7 @@ Haroen \textsc{Viaene}\\
 
 't Wit Huis te Loppem is een instelling voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorieke. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week werken.
 
-De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een ``White House Band'', die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Raymond van het Groenewoud. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld.
+De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een ``White House Band'', die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Raymond van het Groenewoud. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld gecombineerd met de werken die door de bewoners zelf worden gemaakt. Deze werken worden ook over het hele centrum opgehangen.
 
 Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaalde gebroken dingen, vogelnestjes maken, vroeger ook helpen met het eten (maar dit is tegenwoordig niet meer toegelaten door strengere eisen qua voedsel).
 
