typo's and suggestions

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -55,17 +55,31 @@ Haroen \textsc{Viaene}\\
 
 % voorstelling van de instelling, de doelgroep, met contactpersoon, 1 bladzijde
 
-'t Wit Huis te Loppem is een instelling voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorieke. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week werken.
+'t Wit Huis te Loppem is een voorziening van het type ``werken en wonen'' voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorische. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week ergens anders werken of verblijven.
 
-De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een ``White House Band'', die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Raymond van het Groenewoud. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld gecombineerd met de werken die door de bewoners zelf worden gemaakt. Deze werken worden ook over het hele centrum opgehangen.
+De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een muziekgroep ``De Witte Wolven''(vroeger ``White House Band''), die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Wigbert en Wim Opbrouck. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld gecombineerd met de werken die door de bewoners zelf worden gemaakt. Deze werken worden ook over het hele centrum tentoon gesteld.
 
 Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaalde gebroken dingen, vogelnestjes maken, vroeger ook helpen met het eten (maar dit is tegenwoordig niet meer toegelaten door strengere eisen qua voedsel).
 
 Ook is er een grote focus op sport, en wordt er ook elk jaar meegedaan aan evenementen zoals de Special Olympics en lokale fiets-, loop-, zwem- en andere wedstrijden.
 
-Op 't Wit Huis verblijven momenteel 30 bewoners van 19 tot 70 jaar.
-% check this %
-Ze worden begeleid door een team van 20 man.
+* sport zonder wedstrijd ook (tandem)
+
+Op 't Wit Huis verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
+
+* eigen programma per jaar
+* gebaseerd op het verlangen van begeleiders
+* ergotherapie (boetseren, potten maken, papier scheppen, kaartjes maken, bloemschikken, thee, zeep, shampoos) die verkocht worden
+* fruit- en groenteteelt, pizza's, lasagna, eieren
+* psychoanalytische werkvisie (Jacques Lacan)
+* Onderdeel vd Kade, Spermalie
+* contact Geert Viaene
+* Eigen kamer, met versieringen
+* Vrije tijd op eigen kamer
+* sommige zelfstandig boodschappen doen/wandelen
+* andere organisaties/hobby's zoals koor
+* uitstappen (Lourdes, Toneel, Optredens, volksspelen, bibliotheken)
+* vrijwilligers
 
 \section{Verslag}
 
