implement some of the additions

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -55,7 +55,7 @@ Haroen \textsc{Viaene}\\
 
 % voorstelling van de instelling, de doelgroep, met contactpersoon, 1 bladzijde
 
-'t Wit Huis te Loppem is een voorziening van het type ``werken en wonen'' voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorische. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week ergens anders werken of verblijven.
+’t Wit Huis te Loppem is een voorziening van het type ``werken en wonen'' voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorische. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week ergens anders werken of verblijven.
 
 De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een muziekgroep ``De Witte Wolven''(vroeger ``White House Band''), die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Wigbert en Wim Opbrouck. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld gecombineerd met de werken die door de bewoners zelf worden gemaakt. Deze werken worden ook over het hele centrum tentoon gesteld.
 
@@ -63,12 +63,12 @@ Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaal
 
 Ook is er een grote focus op sport, en wordt er ook elk jaar meegedaan aan evenementen zoals de Special Olympics en lokale fiets-, loop-, zwem- en andere wedstrijden.
 
-* sport zonder wedstrijd ook (tandem)
+Buiten sportwedstrijden wordt er ook na de activiteiten---al dan niet met vrijwilligers---aan sport zoals fietsen met tandems, fitness, wandelen enz. gedaan.
+
+De bewoners kunnen elk jaar een programma beslissen, met activiteiten die voorgesteld worden door de begeleiders zelf.
 
 Op 't Wit Huis verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
 
-* eigen programma per jaar
-* gebaseerd op het verlangen van begeleiders
 * ergotherapie (boetseren, potten maken, papier scheppen, kaartjes maken, bloemschikken, thee, zeep, shampoos) die verkocht worden
 * fruit- en groenteteelt, pizza's, lasagna, eieren
 * psychoanalytische werkvisie (Jacques Lacan)
@@ -99,7 +99,7 @@ De activiteit in de morgen heette \emph{klusklub}, waarbij een aantal bewoners m
 
 Vandaag was dit het toevoegen aan blokjes in een sportrek. Er hing een ijzeren rek aan de hoogste sport voor de opening die zo'n sportrek altijd heeft. Dit was jammer genoeg te laag voor enkele bewoners dus moest het verplaatst worden naar de hoogste sport. Op die hoogte waren er geen sporten onder voor het te ondersteunen, dus dat moest vervangen worden door blokjes. De materialen hebben we gehaald bij de houtwerkplaats, die deze instelling ook heeft.
 
-Dit werk was rond 11:45 gedaan, waarna ik geholpen heb bij het sorteren van het eten -- dat via Spermalie geregeld wordt. Bij het eten heb ik geholpen bij het inschenken van mijn tafel, opscheppen van de borden en bij één iemand moest het eten voor hem gesneden worden.
+Dit werk was rond 11:45 gedaan, waarna ik geholpen heb bij het sorteren van het eten---dat via Spermalie geregeld wordt. Bij het eten heb ik geholpen bij het inschenken van mijn tafel, opscheppen van de borden en bij één iemand moest het eten voor hem gesneden worden.
 
 Om 13:12 was mijn werk gedaan, en heb ik het evaluatieblad afgegeven aan de groepschef van de instelling. Daarna heb ik mijn verslag van de voormiddag geschreven. Om 13:30 begint de vergadering die de namiddag doet opstarten.
 
