add new section

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -19,7 +19,7 @@
 
 \HRule \\[0.4cm]
 { \LARGE \bfseries Project empathie in de sociale sector}\\[0.4cm]
-{\large \textit{'t Wit Huis, Loppem}}\\[0.2cm]
+{\large \emph{'t Wit Huis, Loppem}}\\[0.2cm]
 
 \HRule \\[1.5cm]
 
@@ -70,7 +70,7 @@ De bewoners kunnen elk jaar een programma beslissen, met activiteiten die voorge
 Op 't Wit Huis verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
 
 * ergotherapie (boetseren, potten maken, papier scheppen, kaartjes maken, bloemschikken, thee, zeep, shampoos) die verkocht worden
-* fruit- en groenteteelt, pizza's, lasagna, eieren
+* fruit- en groenteteelt, pizza's, lasagne, eieren
 * psychoanalytische werkvisie (Jacques Lacan)
 * Onderdeel vd Kade, Spermalie
 * contact Geert Viaene
@@ -116,6 +116,10 @@ Na het wandelen drinken we allemaal een drankje in de cafetaria van de Abdij van
 Om 16:45 heb ik mijn dag afgesloten en ben ik naar huis gegaan.
 
 \subsection{Dinsdag 15 december 2015}
+
+\subsubsection{Voormiddag}
+
+Deze dag begon net zoals gisteren met de vergadering die alle bewoners en de taken overloopt. Deze duurt van 8:30 tot 9:00. Hierin wordt nog eens bevestigd dat ik deze morgen de activiteit \emph{muziek} volg.
 
 \subsection{Maandag 21 december 2015}
 
